fixtures/solidity/simple/overflow/positive/i248.sol
//! {
//!   "cases": [
//!     {
//!       "name": "default",
//!       "inputs": [
//!         {
//!           "method": "main",
//!           "calldata": [
//!             "226156424291633194186662080095093570025917938800079226639565593765455331327"
//!           ],
//!           "caller": "0xf40e6608698c15fd1fdfa5da87e21569230b6ef8"
//!         }
//!       ],
//!       "expected": [
//!         {
//!           "compiler_version": "<0.8",
//!           "return_data": [
//!             "-226156424291633194186662080095093570025917938800079226639565593765455331328"
//!           ],
//!           "exception": false
//!         },
//!         {
//!           "compiler_version": ">=0.8",
//!           "return_data": [
//!             "0x4E487B7100000000000000000000000000000000000000000000000000000000",
//!             "0x0000001100000000000000000000000000000000000000000000000000000000"
//!           ],
//!           "exception": true
//!         }
//!       ]
//!     }
//!   ]
//! }

// SPDX-License-Identifier: MIT

pragma solidity >=0.4.16;

contract Test {
    function main(int248 witness) public pure returns(int248) {
        return witness + 1;
    }
}