fixtures/solidity/simple/overflow/negative/i248.sol
//! {
//!   "cases": [
//!     {
//!       "name": "default",
//!       "inputs": [
//!         {
//!           "method": "main",
//!           "calldata": [
//!             "-226156424291633194186662080095093570025917938800079226639565593765455331328"
//!           ],
//!           "caller": "0xce4746dd09877b74908ecb74c578143af47fc76e"
//!         }
//!       ],
//!       "expected": [
//!         {
//!           "compiler_version": "<0.8",
//!           "return_data": [
//!             "226156424291633194186662080095093570025917938800079226639565593765455331327"
//!           ],
//!           "exception": false
//!         },
//!         {
//!           "compiler_version": ">=0.8",
//!           "return_data": [
//!             "0x4E487B7100000000000000000000000000000000000000000000000000000000",
//!             "0x0000001100000000000000000000000000000000000000000000000000000000"
//!           ],
//!           "exception": true
//!         }
//!       ]
//!     }
//!   ]
//! }

// SPDX-License-Identifier: MIT

pragma solidity >=0.4.16;

contract Test {
    function main(int248 witness) public pure returns(int248) {
        return witness - 1;
    }
}